# GDL

./: CMakeLists.txt  GDL.cpp  GPDL.h  PGDL.cpp  PGDL.h  README.md  Util.cpp  Util.h  aruco_translation.py  main.cpp
